# python-iniparse

./: .packit.yaml  .travis.yml  Changelog  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README  README.md  check  iniparse.spec  pyproject.toml  python-iniparse.spec  runtests.py  setup.cfg  setup.py  test.py  test_case.xml  tox.ini
.github/workflows/: docstrings_validation.yml  pytest.yml  testimony.yml
cfgparse/: compat.py  config.py  iniparser.py  line_types.py
debian/: changelog  control  copyright  iniparse.postinst.debhelper  iniparse.prerm.debhelper  iniparse.substvars  rules
html/: index.html
iniparse/: __init__.py  compat.py  config.py  configparser.py  ini.py  iniparser.py  utils.py
scripts/: container-pre-test.sh
tests/: __init__.py  custom_betelgeuse_config.py  test_compat.py  test_config.py  test_fuzz.py  test_ini.py  test_iniparser.py  test_lines.py  test_misc.py  test_multiprocessing.py  test_tidy.py  test_unicode.py  testimony.yml
